force-app/main/default/objects/Chuzo_Provider_Phone_Numbers__mdt/Chuzo_Provider_Phone_Numbers__mdt.object-meta.xml
<CustomObject>
    <label>Chuzo Provider Phone Numbers</label>
    <pluralLabel>Chuzo Provider Phone Numbers</pluralLabel>
</CustomObject>