force-app/main/default/objects/Chuzo_Provider_Phone_Numbers__mdt/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>Name of the provider</description>
    <label>Provider</label>
    <length>55</length>
    <required>true</required>
    <type>Text</type>
</CustomField>