force-app/main/default/objects/Chuzo_Provider_Phone_Numbers__mdt/fields/Used_For__c.field-meta.xml
<CustomField>
    <fullName>Used_For__c</fullName>
    <description>Which tab or step is the phone used for.</description>
    <label>Used For</label>
    <length>55</length>
    <required>true</required>
    <type>Text</type>
</CustomField>